@@ -1,34 +1,37 @@
-Don Albert <Don.Albert@bull.com>
-Ernest Artiaga <ernest.artiaga@bsc.es>
-Danny Auble <auble1@llnl.gov>
-Susanne Balle <susanne.balle@hp.com>
-Anton Blanchard <anton@samba.org>
-Hongjia Cao <hgcao@nudt.edu.cn>
-Chuck Clouston <Chuck.Clouston.bull.com>
-Daniel Christians <Daniel.Christians@hp.com>
-Gilles Civario <gilles.civario@bull.net>
-Chris Dunlap <cdunlap@llnl.gov>
-Joey Ekstrom <ekstrom1@llnl.gov>
-Jim Garlick <garlick@llnl.gov>
-Mark Grondona <mgrondona@llnl.gov>
-Christopher Holmes <cholmes@hp.com>
-Takao Hatazaki <takao.hatazaki@hp.com>
-Nathan Huff <nhuff@geekshanty.com>
-David Jackson <jacksond@clusterresources.com>
-Greg Johnson <gjohnson@lanl.gov>
-Morris Jette <jette1@llnl.gov>
-Jason King <king49@llnl.gov>
-Donna Mecozzi <mecozzi1@llnl.gov>
-Chris Morrone <morrone2@llnl.gov>
-Bryan O'Sullivan <bos@pathscale.com>
-Gennaro Oliva <oliva.g@na.icar.cnr.it>
-Daniel Palermo <dan.palermo@hp.com>
-Dan Phung <phung4@llnl.gov>
-Ashley Pitman <ashley@quadrics.com>
-Andy Riebs <Andy.Riebs@hp.com>
-Federico Sacerdoti <Federico.Sacerdoti@deshaw.com>
-Jeff Squyres <jsquyres@lam-mpi.org>
-Keven Tew <tew1@llnl.gov>
-Prashanth Tamraparni <prashanth.tamraparni@hp.com>
-Jay Windley <jwindley@lnxi.com>
-Ann-Marie Wunderlin<Anne-Marie.Wunderlin@Bull.com>
+Don Albert <Don.Albert(at)bull.com>
+Ernest Artiaga <ernest.artiaga(at)bsc.es>
+Danny Auble <auble1(at)llnl.gov>
+Susanne Balle <susanne.balle(at)hp.com>
+Anton Blanchard <anton(at)samba.org>
+Hongjia Cao <hgcao(at)nudt.edu.cn>
+Chuck Clouston <Chuck.Clouston(at)bull.com>
+Daniel Christians <Daniel.Christians(at)hp.com>
+Gilles Civario <gilles.civario(at)bull.net>
+Chris Dunlap <cdunlap(at)llnl.gov>
+Joey Ekstrom <ekstrom1(at)llnl.gov>
+Jim Garlick <garlick(at)llnl.gov>
+Mark Grondona <mgrondona(at)llnl.gov>
+Christopher Holmes <cholmes(at)hp.com>
+Takao Hatazaki <takao.hatazaki(at)hp.com>
+Nathan Huff <nhuff(at)geekshanty.com>
+David Jackson <jacksond(at)clusterresources.com>
+Greg Johnson <gjohnson(at)lanl.gov>
+Morris Jette <jette1(at)llnl.gov>
+Jason King <king49(at)llnl.gov>
+Nancy Kritkausky <Nancy.Kritkausky(at)bull.com>
+Bernard Li <bli(at)bcgsc.ca>
+Puenlap Lee <Puen-Lap.Lee(at)bull.com>
+Donna Mecozzi <mecozzi1(at)llnl.gov>
+Chris Morrone <morrone2(at)llnl.gov>
+Bryan O'Sullivan <bos(at)pathscale.com>
+Gennaro Oliva <oliva.g(at)na.icar.cnr.it>
+Daniel Palermo <dan.palermo(at)hp.com>
+Dan Phung <phung4(at)llnl.gov>
+Ashley Pitman <ashley(at)quadrics.com>
+Andy Riebs <Andy.Riebs(at)hp.com>
+Federico Sacerdoti <Federico.Sacerdoti(at)deshaw.com>
+Jeff Squyres <jsquyres(at)lam-mpi.org>
+Keven Tew <tew1(at)llnl.gov>
+Prashanth Tamraparni <prashanth.tamraparni(at)hp.com>
+Jay Windley <jwindley(at)lnxi.com>
+Ann-Marie Wunderlin<Anne-Marie.Wunderlin(at)Bull.com>
