@@ -34,8 +34,10 @@
 <li>Chris Holmes (HP)</li>
 <li>Nathan Huff (North Dakota State University)</li>
 <li>David Jackson (Cluster Resources)</li>
-<li>Greg Johnson (LANL) </li>
+<li>Greg Johnson (LANL)</li>
 <li>Jason King (LLNL)</li>
+<li>Nancy Kritkausky (Bull)</li>
+<li>Puenlap Lee (Bull)</li>
 <li>Bernard Li (Genome Sciences Centre, Canada)</li>
 <li>Donna Mecozzi (LLNL)</li>
 <li>Bryan O'Sullivan (Pathscale)</li>
@@ -52,6 +54,6 @@ Networking, Italy)</li>
 <li>Anne-Marie Wunderlin (Bull)</li>
 </ul>
 
-<p style="text-align:center;">Last modified 8 June 2007</p>
+<p style="text-align:center;">Last modified 14 June 2007</p>
 
 <!--#include virtual="footer.txt"-->
