@@ -131,6 +131,14 @@ int kvs_rec_cnt = 0;
 struct kvs_rec *kvs_recs;
 int kvs_name_sequence = 0;
 
+static char *pmi_opt_str =
+  "pmi command line options \n"
+  "        \n"
+  "        \n"
+  "        \n";
+
+static int IsPmiKey(char *);
+
 /* PMI Group functions */
 
 /*@
@@ -1510,8 +1518,12 @@ argument as long as the options are contiguous in the args array.
 int PMI_Parse_option(int num_args, char *args[], int *num_parsed, PMI_keyval_t **keyvalp, 
 		int *size)
 {
-if (pmi_debug)
-		fprintf(stderr, "In: PMI_Parse_option - NOT SUPPORTED\n");
+	int i, n, s, len;
+	char *cp, *kp, *vp;
+	PMI_keyval_t *temp;
+
+	if (pmi_debug)
+		fprintf(stderr, "In: PMI_Parse_option - \n");
 
 	if (num_parsed == NULL)
 		return PMI_ERR_INVALID_NUM_PARSED;
@@ -1520,8 +1532,57 @@ if (pmi_debug)
 	if (size == NULL)
 		return PMI_ERR_INVALID_SIZE;
 
-	/* FIXME */
-	return PMI_FAIL;
+	i = 0;
+	n = 0;
+	s = 0;
+
+	cp = args[0];
+	temp = (PMI_keyval_t *) malloc(num_args * (sizeof (PMI_keyval_t)));
+	if (temp == NULL) return PMI_FAIL;
+
+	cp = args[0];
+	while (i < num_args) {
+
+		while (*cp == ' ') cp++;
+		n++; // number of array elements processed
+		kp = cp;	// keyword start here
+		while (*cp != ' ' && *cp != '=' && *cp != '\n' && *cp != '\0') cp++;
+		if (*cp != '=')  {
+			n++;
+			break;
+		}
+		len = cp - kp;
+		temp[s].key = (char *) malloc((len+1) * sizeof (char));
+		if (temp[s].key == NULL) return PMI_FAIL;
+		strncpy(temp[s].key, kp, len);
+		temp[s].key[len] = '\0';
+		if (!IsPmiKey(temp[s].key)) {
+			free(temp[s].key);
+			temp[s].key=NULL;
+			break;
+		}
+		vp = ++cp;
+		while (*cp != ' ' && *cp != '\n' && *cp != '\0') cp++;
+		len = cp - vp + 1;
+		temp[s].val = (char *) malloc((len+1) * sizeof (char));
+		if (temp[s].val == NULL) return PMI_FAIL;
+		strncpy(temp[s].val, vp, len);
+		temp[s].val[len] = '\0';
+		s++;
+		i++;  // try next args
+		cp = args[i];
+
+	}
+
+	if (s == 0) {
+		free(temp);
+		temp = NULL;
+	}
+	*keyvalp = temp;
+	*num_parsed = n;
+	*size = s;
+	
+	return PMI_SUCCESS;
 }
 
 /*@
@@ -1549,17 +1610,72 @@ not be used to free this array as there is no requirement that the array be
 allocated with 'malloc()'.
 
 @*/
+
+/* Assume it is the standard c input argument format, i.e.,
+   argcp points to number of arguments
+   argvp points to the number of array of arguments, with argv[0] is the cmd
+   argv[1], argv[2]... are the keyword/argument pair.
+
+*/
+
 int PMI_Args_to_keyval(int *argcp, char *((*argvp)[]), PMI_keyval_t **keyvalp, 
 		int *size)
 {
-	if  (pmi_debug)
-		fprintf(stderr, "In: PMI_Args_to_keyval - NOT SUPPORTED\n");
+	int i, j, cnt;
+	PMI_keyval_t *temp;
+	char **argv;
 
-	if ((keyvalp == NULL) || (size == NULL))
+	if  (pmi_debug)
+		fprintf(stderr, "In: PMI_Args_to_keyval \n");
+
+	if ((keyvalp == NULL) || (size == NULL) || (argcp == NULL) || (argvp == NULL))
 		return PMI_ERR_INVALID_ARG;
 
-	/* FIXME */
-	return PMI_FAIL;
+	cnt=*argcp;
+	argv = *argvp;
+
+	temp = (PMI_keyval_t *) malloc(cnt * (sizeof (PMI_keyval_t)));
+	if (temp == NULL) return PMI_FAIL;
+
+	if (cnt == 0) return PMI_ERR_INVALID_ARG;
+	j = 0;
+	i = 0;
+
+	if (argv[i][0] != '-') {
+		temp[j].val = (char *) malloc((strlen(argv[i])+1) * sizeof (char));
+		if (temp[j].val == NULL) return PMI_FAIL;
+		strcpy(temp[j].val, argv[i]);
+		temp[i].key=NULL;
+		--cnt;
+		++j;
+		++i;
+	}
+
+	while (cnt) {
+		if (argv[i][0] == '-') {
+			temp[j].key = (char *) malloc((strlen(argv[i])+1) * sizeof (char));
+			if (temp[j].key == NULL) return PMI_FAIL;
+			strcpy(temp[j].key, argv[i]);
+			++i;
+			--cnt;
+			if ((cnt) && (argv[i][0] != '-')){
+				temp[j].val = (char *) malloc((strlen(argv[i])+1) * sizeof (char));
+				if (temp[j].val == NULL) return PMI_FAIL;
+				strcpy(temp[j].val, argv[i]);
+				i++;
+				--cnt;
+			} else {
+				temp[j].val = NULL;
+			}
+			j++;
+		} else {
+			return PMI_ERR_INVALID_ARG;
+		}
+	}
+	*size = j;
+	*keyvalp = temp;
+
+	return PMI_SUCCESS;
 }
 
 /*@
@@ -1581,14 +1697,25 @@ Notes:
 @*/
 int PMI_Free_keyvals(PMI_keyval_t keyvalp[], int size)
 {
-	if (pmi_debug)
-		fprintf(stderr, "In: PMI_Free_keyvals - NOT SUPPORTED\n");
+	int i;
 
-	if ((keyvalp == NULL) && size)
+	if (pmi_debug)
+		fprintf(stderr, "In: PMI_Free_keyvals \n");
+
+	if (((keyvalp == NULL) && size)  || (size < 0))
 		return PMI_ERR_INVALID_ARG;
 
-	/* FIXME */
-	return PMI_FAIL;
+	if (size == 0) {
+		if (keyvalp != NULL) free(keyvalp);
+		return PMI_SUCCESS;
+	}
+
+	for (i=0; i<size; i++) {
+		if ((keyvalp[i].key) != NULL) free(keyvalp[i].key);
+		if ((keyvalp[i].val) != NULL) free(keyvalp[i].val);
+	}
+	free(keyvalp);
+	return PMI_SUCCESS;
 }
 
 /*@
@@ -1614,12 +1741,37 @@ Notes:
 @*/
 int PMI_Get_options(char *str, int *length)
 {
+	int optlen;
+
 	if (pmi_debug)
-		fprintf(stderr, "In: PMI_Get_options - NOT SUPPORTED\n");
+		fprintf(stderr, "In: PMI_Get_options \n");
 
 	if ((str == NULL) || (length == NULL))
 		return PMI_ERR_INVALID_ARG;
 
-	/* FIXME */
-	return PMI_FAIL;
+	optlen = strlen(pmi_opt_str);
+	if (*length <= optlen) {
+		strncpy(str, pmi_opt_str, *length-1);
+		str[*length-1] = '\0';
+		return PMI_ERR_NOMEM;
+	}
+
+    strcpy(str, pmi_opt_str);
+    return PMI_SUCCESS;
+}
+
+static int IsPmiKey(char * key) {
+	char strh[5];
+
+	if (pmi_debug)
+		fprintf(stderr, "In: IsPmiKey \n");
+
+	strncpy(strh, key, 4);
+	strh[4]='\0';
+ 	if (!strcmp(strh, "PMI_") && (strlen(key) > 4)) {
+		return 1;
+	}
+
+	/* add code to test special key if needed */
+	return 0;
 }
